[package]
name = "dit-as-91896"
version = "0.1.0"
edition = "2021"
description = "A Ncea Project That Allow User To Order Food."
license = "GPL-3.0 license"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ctrlc = "3.4.4"
map-macro = "0.3.0"
text_io = "0.1.12"
