[package]
name = "dit-as-91896"
version = "0.1.2"
edition = "2021"
description = "A Ncea Project That Allow User To Order Food."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Notliam99/7dit_as_91896_2.7.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
crossterm = "0.27.0"
ctrlc = "3.4.4"
map-macro = "0.3.0"
text_io = "0.1.12"
